# course_work_4

./: README.md  pyproject.toml
course_work_4/: Abstract.py  Connect_API.py  functions.py  json_saver.py  main.py  parser_hh.py  parser_sj.py  vacantions.py
